added comments to code and fixed a big in the modeling split

--- a/get-champion-ids.ipynb
+++ b/get-champion-ids.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pulls champion key ids from datadragon."
+    "Pulls champion key ids from datadragon. Not much to see here"
    ]
   },
   {
@@ -29,10 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# check league's latest version\n",
     "latest = lol_watcher.data_dragon.versions_for_region(REGION)['n']['champion']\n",
-    "# Lets get some champions static information\n",
+    "# get some champions static information\n",
     "static_champ_list = lol_watcher.data_dragon.champions(latest, False, 'en_US')\n"
    ]
   },
@@ -196,6 +195,7 @@
     }
    ],
    "source": [
+    "# get champion info and use champion key as index\n",
     "champ_name_df=pd.DataFrame(static_champ_list[\"data\"]).T[[\"id\",\"key\",\"name\",\"stats\"]]\n",
     "champ_name_df[champ_name_df[\"name\"]!=champ_name_df.index]\n",
     "champ_name_df[\"key\"]=champ_name_df[\"key\"].astype(int)\n",
@@ -210,6 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# returning the index to column after sorting it and then not saving the index...\n",
+    "# v silly could fix but its fine\n",
     "key_name = champ_name_df[\"id\"].sort_index().reset_index()"
    ]
   },
