--- a/pull-timelines.ipynb
+++ b/pull-timelines.ipynb
@@ -1,23 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'docstring :)'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"docstring :)\"\"\""
+    "# pull-timelines\n",
+    "\n",
+    "This notebook is to request timelines from riot's api and turn them into dataframes."
    ]
   },
   {
@@ -32,7 +21,6 @@
     "from riotwatcher import LolWatcher, ApiError\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "# from time import sleep\n",
     "\n",
     "with open('data/api-key.txt', 'r') as api:\n",
     "    API_KEY = api.read()\n",
@@ -54,13 +42,6 @@
     "np.random.seed(7)\n",
     "\n",
     "matches = pd.read_csv(\"data/clid-matches.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "the time stamp 44111 is 44 seconds and 111 milliseconds"
    ]
   },
   {
@@ -274,7 +255,14 @@
    "outputs": [],
    "source": [
     "def get_match(match_id, region=\"kr\"):\n",
-    "    \"\"\"matchid is str, returns:\n",
+    "    \"\"\"\n",
+    "    get_match gets the info about a game in preparation for pulling the\n",
+    "    corresponding timeline.\n",
+    "    \n",
+    "        Arguments:\n",
+    "    matchid is str,\n",
+    "    \n",
+    "        returns:\n",
     "    match_json is a json obj that has whole match's data\n",
     "    player_participant_id is clid's id in this game\n",
     "    blue_team is the set of ids on the blue team not counting clid if clid is on blue\n",
@@ -282,10 +270,12 @@
     "    the team that has clid on it is returned first.\n",
     "    and returns 1 if clid is on red team and 0 if clid is on blue team.\n",
     "    \"\"\"\n",
+    "    # request match info\n",
     "    match_request = requests.get(\"https://\"+region+\".api.riotgames.com/lol/match/v4/matches/\"+match_id,\n",
     "                                 headers=HEADERS)\n",
     "    match_json = json.loads(match_request.text)\n",
     "    \n",
+    "    # add participants to each team\n",
     "    blue_team = []\n",
     "    red_team = []\n",
     "    for participant in match_json[\"participants\"]:\n",
@@ -295,6 +285,8 @@
     "            blue_team.append(participant[\"participantId\"])\n",
     "        else:\n",
     "            red_team.append(participant[\"participantId\"])\n",
+    "    \n",
+    "    # Clid's id is stored separately, so the team with 4 players is Clid's team\n",
     "    if len(red_team) == 4:\n",
     "        return match_json, player_participant_id, red_team, blue_team, 1\n",
     "    else:\n",
@@ -308,6 +300,37 @@
    "outputs": [],
    "source": [
     "def get_timeline(match_id, ppi, ally_team_ids, enemy_team_ids, side, region=\"kr\", give_json=True):\n",
+    "    \"\"\"\n",
+    "    Gets the timeline of a given game and turns it into a dataframe selecting\n",
+    "    for current gold, total gold, jungler camps, level, x pos, and y pos.\n",
+    "    \n",
+    "        Arguments:\n",
+    "    match_id:\n",
+    "        match id (str)\n",
+    "        \n",
+    "    ppi:\n",
+    "        player participant id for Clid\n",
+    "        \n",
+    "    ally_team_ids:\n",
+    "        list of ally team's ids\n",
+    "    \n",
+    "    enemy_team_ids:\n",
+    "        list of enemy team's ids\n",
+    "    \n",
+    "    side:\n",
+    "        0 for blue side, 1 for red side (blue is south west side)\n",
+    "        \n",
+    "    region:\n",
+    "        region's id - Korea's is \"kr\", North America is \"na\", found online. \n",
+    "        \n",
+    "    give_json:\n",
+    "        indicates whether or not to return the timeline as a json as well\n",
+    "    \n",
+    "        Returns:\n",
+    "    Dictionary with keys \"df\" for dataframe and \"json\" if give_json=True\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
     "    url = [\"https://\", \".api.riotgames.com/lol/match/v4/timelines/by-match/\"]\n",
     "    url = \"\".join([url[0], region, url[1], match_id])\n",
     "    timeline_res = requests.get(url, headers=HEADERS)\n",
@@ -1391,6 +1414,36 @@
    "outputs": [],
    "source": [
     "def get_n_timelines(match_df, start_index, end_index, give_json=True, region=\"kr\"):\n",
+    "    \"\"\"\n",
+    "    Calls get_timeline on all the matches within a certain range.\n",
+    "    \n",
+    "        Arguments:\n",
+    "    match_df:\n",
+    "        the dataframe of matches pulled before.\n",
+    "        \n",
+    "    start_index:\n",
+    "        int of how many matches to start pulling from.\n",
+    "    \n",
+    "    end_index:\n",
+    "        int of index of match to stop pulling from.\n",
+    "        \n",
+    "    give_json:\n",
+    "        whether or not toget jsons.\n",
+    "    \n",
+    "    region:\n",
+    "        region id same as get_timelines.\n",
+    "    \n",
+    "        Returns:\n",
+    "    matches:\n",
+    "        matches dataframe\n",
+    "        \n",
+    "    dfs:\n",
+    "        dictionary of dataframes\n",
+    "        \n",
+    "    jsons:\n",
+    "        json versons of timelines\n",
+    "    \n",
+    "    \"\"\"\n",
     "    matches = {}\n",
     "    dfs = {}\n",
     "    if give_json:\n",
@@ -1413,7 +1466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "fetching timelines - I don't have a function to make the calls fit the api limits so you have to pause briefly between each of the following cells - its not bad though."
+    "fetching timelines - I don't have a function to make the calls fit the api limits currently but 30 seconds worked ok for me - may need more or less."
    ]
   },
   {
@@ -1617,8 +1670,8 @@
     }
    ],
    "source": [
-    "#import time\n",
-    "#time.sleep(15)\n",
+    "import time\n",
+    "time.sleep(30)\n",
     "result3 = get_n_timelines(matches, 100, 150)"
    ]
   },
@@ -1691,6 +1744,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## saving the data collected"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 236,
    "metadata": {},
@@ -1707,7 +1767,7 @@
     }
    ],
    "source": [
-    "# rdd = result_df_dis \n",
+    "# combining the pulled data into a single dictionary\n",
     "rdd = [result1[1],result2[1],result3[1], result4[1]]\n",
     "result_ids = set(rdd[0].keys())\n",
     "result_ids.update(result2[1].keys(),result3[1].keys(),result4[1].keys())#\n",
