--- a/request-clid-match-history.ipynb
+++ b/request-clid-match-history.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Getting Clid's Match History\n",
+    "\n",
+    "Getting the game ids for all of Clid's games on Lee Sin"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -33,19 +42,32 @@
    "outputs": [],
    "source": [
     "def get_matches(region, summ_name, champion_key=\"\", index=\"\"):\n",
+    "    \"\"\"\n",
+    "    Gets all the matches for a player on a given champion\n",
+    "    and returns them as a dataframe. Partially uses a separate\n",
+    "    API.\n",
+    "    \"\"\"\n",
+    "    # get player object\n",
     "    summoner_obj = lol_watcher.summoner.by_name(region, summ_name)\n",
+    "    \n",
     "    if champion_key != \"\":\n",
     "        champion_key = \"\".join([\"?champion=\",str(champion_key)])\n",
     "    if index!=\"\":\n",
     "        index = \"\".join([\"&beginIndex=\", str(index)])\n",
+    "    \n",
+    "    # make url\n",
     "    if region == \"kr\":\n",
     "        summ_url = \"\".join([\"https://kr.api.riotgames.com/lol/match/v4/matchlists/by-account/\",\n",
     "                           summoner_obj[\"accountId\"], champion_key, index])\n",
     "    elif region == \"na\":\n",
     "        summ_url = \"\".join([\"https://na1.api.riotgames.com/lol/match/v4/matchlists/by-account/\",\n",
     "                           summoner_obj[\"accountId\"], champion_key, index])\n",
+    "    \n",
+    "    #request url\n",
     "    summ_response = requests.get(summ_url,headers=HEADERS)\n",
     "    summ_json = json.loads(summ_response.text)\n",
+    "    \n",
+    "    # return\n",
     "    try:\n",
     "        return pd.DataFrame(summ_json[\"matches\"])\n",
     "    except KeyError as e:\n",
@@ -252,6 +274,7 @@
     }
    ],
    "source": [
+    "# testing\n",
     "get_matches(\"kr\", \"Gen G Clid\", 64)"
    ]
   },
@@ -464,6 +487,7 @@
    "outputs": [],
    "source": [
     "def get_all_matches(region, summ_name, champion_key):\n",
+    "    \"\"\"calls get_matches on 100 games until all games are pulled\"\"\"\n",
     "    index = 0\n",
     "    match_batches = []\n",
     "    while True:\n",
@@ -692,6 +716,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# remove games where clid plays lee sin in other roles bc sometime he trolls\n",
     "matches = matches[matches[\"lane\"]==\"JUNGLE\"]"
    ]
   },
@@ -701,6 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save matches\n",
     "matches.to_csv(\"data/clid-matches.csv\", index=False)"
    ]
   },
