realized i have conv and multi dense switched needs to be fixed for both - tried to use list for metrics but it doesn't seem to work

--- a/notebooks/final-modeling-epoch-30.ipynb
+++ b/notebooks/final-modeling-epoch-30.ipynb
@@ -2096,8 +2096,8 @@
     "md_err = {}\n",
     "conv_err = {}\n",
     "for i in conv_models.keys():\n",
-    "    md_err[i] = conv_models[i].evaluate(test[i][0], test[i][1])\n",
-    "    conv_err[i] = multi_dense_models[i].evaluate(test[i][0], test[i][1])\n",
+    "    conv_err[i] = conv_models[i].evaluate(test[i][0], test[i][1])\n",
+    "    md_err[i] = multi_dense_models[i].evaluate(test[i][0], test[i][1])\n",
     "    print(\"multistep dense model mae\",str(i), md_err[i][1])\n",
     "    print(\"convolutional model mae\",str(i), conv_err[i][1])\n",
     "print(\"baseline mae:\", baseline_error[1])\n",
