saving data as files so that code runs faster when rerun

--- a/notebooks/final-modeling-epoch-30.ipynb
+++ b/notebooks/final-modeling-epoch-30.ipynb
@@ -2058,34 +2058,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10/10 [==============================] - 0s 1ms/step - loss: 4367.3433 - tensor_distance_mae: 4367.3433\n",
-      "10/10 [==============================] - 0s 2ms/step - loss: 5373.5103 - tensor_distance_mae: 5373.5103\n",
-      "10/10 [==============================] - 0s 1ms/step - loss: 4340.4277 - tensor_distance_mae: 4340.4277\n",
-      "10/10 [==============================] - 0s 1ms/step - loss: 4293.3022 - tensor_distance_mae: 4293.3022\n",
-      "10/10 [==============================] - 0s 1ms/step - loss: 4254.4751 - tensor_distance_mae: 4254.4751\n",
-      "multistep dense model mae 2 4293.30224609375\n",
-      "convolutional model mae 2 4254.47509765625\n",
-      "10/10 [==============================] - 0s 1ms/step - loss: 4190.3564 - tensor_distance_mae: 4190.3564\n",
-      "10/10 [==============================] - 0s 1ms/step - loss: 4297.2241 - tensor_distance_mae: 4297.2241\n",
-      "multistep dense model mae 3 4190.3564453125\n",
-      "convolutional model mae 3 4297.22412109375\n",
-      "10/10 [==============================] - 0s 1ms/step - loss: 4105.7266 - tensor_distance_mae: 4105.7266\n",
-      "10/10 [==============================] - 0s 1ms/step - loss: 4096.0806 - tensor_distance_mae: 4096.0806\n",
-      "multistep dense model mae 4 4105.7265625\n",
-      "convolutional model mae 4 4096.08056640625\n",
-      "baseline mae: 5373.51025390625\n",
-      "center mae: 4234.8857421875\n",
-      "linear mae: 4367.34326171875\n",
-      "dense mae: 4340.427734375\n"
+     "ename": "NameError",
+     "evalue": "name 'linear' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ddf6f195eb39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlinear_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinear\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbaseline_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbaseline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdense_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdense\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmd_err\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mconv_err\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'linear' is not defined"
      ]
     }
    ],
